--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
  <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="MockTest Adda | Govt Exam News & Mock Tests">
 <meta name="twitter:description" content="Fast & reliable SSC, UPSC, Banking & Railway exam updates with free mock tests.">
-<meta name="twitter:image" content="https://freemocktestadda.in/logo.png">
+<meta name="twitter:image" content="https://freemocktestadda.in/twitterlogo.png">
 
 <link rel="icon" href="https://freemocktestadda.in/logo11.png" type="image/png">
 
