--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta property="og:description" content="Get latest SSC, UPSC, Banking & Railway exam notifications, results, admit cards and free mock tests. Fast & reliable exam updates on MockTest Adda.">
 <meta property="og:url" content="https://freemocktestadda.in/">
 <meta property="og:type" content="website">
-<meta property="og:image" content="https://freemocktestadda.in/logo11.png">
+<meta property="og:image" content="https://freemocktestadda.in/twitterlogo.png">
 
 <!-- //whatsapp preview -->
  <!-- Open Graph Meta Tags -->
