--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
         <!-- Side Featured -->
         <div class="flex flex-col gap-4">
-          <a href="https://freemocktestadda.in/ssc-mts-admit-card-2026-out-for-mts-havaldar-ssc-gov-in-10508833.html" class="block" >
+          <a href="https://freemocktestadda.in/ssc-mts-exam-analysis-2026.html" class="block" >
           <div class="news-card bg-card-bg border border-gray-200 rounded p-4 animate-fade-in" style="animation-delay: 0.1s">
             <span class="ui-text text-xs font-semibold uppercase tracking-widest text-burgundy">SSC</span>
             <h3 class="text-xl font-medium mt-2 mb-2">
@@ -378,7 +378,7 @@
         <div class="bg-card-bg border border-gray-200 rounded p-4">
           <h3 class="text-lg font-semibold mb-4 pb-2 border-b border-gray-200">Trending Now</h3>
           <div class="space-y-4">
-            <a href="https://freemocktestadda.in/" class="block group">
+            <a href="https://freemocktestadda.in/ssc-mts-exam-analysis-2026.html" class="block group">
               <div class="flex gap-3">
                 <span class="ui-text text-2xl font-bold text-burgundy/30">01</span>
                 <div>
@@ -609,7 +609,7 @@
         date: "Feb 4, 2026",
         lastDate: "Feb 20, 2026",
         type: "notification",
-        url: "https://freemocktestadda.in/"
+        url: "https://freemocktestadda.in/ssc-mts-exam-analysis-2026.html"
       },
       {
   category: "SSC Post Phase 13",
@@ -625,7 +625,7 @@
   description: "Staff Selection Commission has issued the hall tickets for the MTS (Non-Technical) and Havaldar Examination 2026. Candidates can now download admit cards and check their exam details on the official SSC portal.",
   date: "Feb 05, 2026",
   type: "admit-card",
-  url: "https://freemocktestadda.in/"
+  url: "https://freemocktestadda.in/ssc-mts-exam-analysis-2026.html"
 }
 ,
      {
