--- a/index.html
+++ b/index.html
@@ -766,13 +766,12 @@
       initMobileMenu();
     });
 
-    if (!sessionStorage.getItem("visited")) {
-  sessionStorage.setItem("visited", "1");
-
-  fetch("https://script.google.com/macros/s/AKfycbwIr9LhXHYp3WcwOCydc6zsuJL1PVCs202-Ga5Z9BLr59cpcaxHp8K94Gojy-y141li/exec")
-    .catch(() => {});
-}
-
   </script>
+  <script>
+fetch("https://script.google.com/macros/s/AKfycbwIr9LhXHYp3WcwOCydc6zsuJL1PVCs202-Ga5Z9BLr59cpcaxHp8K94Gojy-y141li/exec")
+  .catch(() => {});
+</script>
+
+  
 </body>
 </html>
