--- a/ssc-mts-exam-analysis-2026.html
+++ b/ssc-mts-exam-analysis-2026.html
@@ -932,11 +932,6 @@
     }, 4000);
   });
 
-
-
-  fetch("https://script.google.com/macros/s/AKfycbwIr9LhXHYp3WcwOCydc6zsuJL1PVCs202-Ga5Z9BLr59cpcaxHp8K94Gojy-y141li/exec")
-    .catch(() => {});
-
   </script>
 
  <script type="application/ld+json">
@@ -994,6 +989,10 @@
 }
 </script>
 
+<script>
+fetch("https://script.google.com/macros/s/AKfycbwIr9LhXHYp3WcwOCydc6zsuJL1PVCs202-Ga5Z9BLr59cpcaxHp8K94Gojy-y141li/exec")
+  .catch(() => {});
+</script>
 
 
 </body>
