--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                 </div>
               </div>
             </a>
-            <a href="https://freemocktestadda.in/" class="block group">
+            <a href="https://freemocktestadda.in/ssc-gd-slot-booking-2026.html" class="block group">
               <div class="flex gap-3">
                 <span class="ui-text text-2xl font-bold text-burgundy/30">04</span>
                 <div>
@@ -634,7 +634,7 @@
   description: "Staff Selection Commission has updated the exam status for SSC GD Constable 2026. Candidates are checking application status, exam city details, and expected admit card release schedule.",
   date: "Feb 2026",
   type: "notification",
-  url: "https://freemocktestadda.in/"
+  url: "https://freemocktestadda.in/ssc-gd-slot-booking-2026.html"
 }
 ,
       {
@@ -644,7 +644,7 @@
   date: "Feb 06, 2026",
   lastDate: "Feb 24, 2026",
   type: "notification",
-   url: "https://freemocktestadda.in/ssc-mts-admit-card-2026-out.html"
+   url: "https://freemocktestadda.in/ssc-gd-slot-booking-2026.html"
 },
       {
         category: "RRB Group D",
