--- a/ssc-mts-exam-analysis-2026.html
+++ b/ssc-mts-exam-analysis-2026.html
@@ -597,7 +597,7 @@
         <div class="bg-white rounded-lg border border-border overflow-hidden shadow-sm">
           <div class="bg-primary text-white px-4 py-3 font-semibold text-xl">Recent Posts</div>
           <div>
-            <a href="https://freemocktestadda.in/" class="text-foreground hover:text-primary text-xl py-2 px-4 block border-b border-border transition-colors">
+            <a href="https://freemocktestadda.in/ssc-gd-admit-card-2026.html" class="text-foreground hover:text-primary text-xl py-2 px-4 block border-b border-border transition-colors">
               <span class="text-primary mr-2">›</span>SSC GD Slot Booking 2026 Date, How to Book Your Exam City and Shifts
             </a>
             <a href="https://freemocktestadda.in/" class="text-foreground hover:text-primary text-xl py-2 px-4 block border-b border-border transition-colors">
@@ -609,7 +609,7 @@
             <a href="https://freemocktestadda.in/" class="text-foreground hover:text-primary text-xl py-2 px-4 block border-b border-border transition-colors">
               <span class="text-primary mr-2">›</span>Delhi Police Head Constable Answer Key 2026 Out
             </a>
-            <a href="https://freemocktestadda.in/" class="text-foreground hover:text-primary text-xl py-2 px-4 block transition-colors">
+            <a href="https://freemocktestadda.in/ssc-mts-exam-analysis-2026.html" class="text-foreground hover:text-primary text-xl py-2 px-4 block transition-colors">
               <span class="text-primary mr-2">›</span>SSC MTS 2026 Exam Day Guidelines and Required Documents
             </a>
           </div>
@@ -625,7 +625,7 @@
             <a href="https://freemocktestadda.in/" class="text-foreground hover:text-primary text-xl py-2 px-4 block border-b border-border transition-colors">
               <span class="text-primary mr-2">›</span>SSC CHSL 2026
             </a>
-            <a href="https://freemocktestadda.in/" class="text-foreground hover:text-primary text-xl py-2 px-4 block border-b border-border transition-colors">
+            <a href="https://freemocktestadda.in/ssc-gd-admit-card-2026.html" class="text-foreground hover:text-primary text-xl py-2 px-4 block border-b border-border transition-colors">
               <span class="text-primary mr-2">›</span>SSC GD Constable 2026
             </a>
             <a href="https://freemocktestadda.in/" class="text-foreground hover:text-primary text-xl py-2 px-4 block border-b border-border transition-colors">
@@ -698,7 +698,7 @@
                 </div>
               </div>
             </a>
-            <a href="https://freemocktestadda.in/" class="block group">
+            <a href="https://freemocktestadda.in/ssc-gd-admit-card-2026.html" class="block group">
               <div class="flex gap-3">
                 <span class="ui-text text-2xl font-bold text-burgundy/30">04</span>
                 <div>
