--- a/ssc-gd-slot-booking-2026.html
+++ b/ssc-gd-slot-booking-2026.html
@@ -464,7 +464,7 @@
     <tbody>
       <tr>
         <td class="px-4 py-3 text-xl border-b border-border">
-          <a href="https://freemocktestadda.in/" class="text-primary hover:underline font-medium">
+          <a href="https://freemocktestadda.in/ssc-gd-admit-card-2026.html" class="text-primary hover:underline font-medium">
             SSC GD Admit Card 2026
           </a>
         </td>
@@ -481,7 +481,7 @@
           </a>
         </td>
         <td class="px-4 py-3 text-xl border-b border-border">
-          <a href="https://freemocktestadda.in/" class="text-primary hover:underline font-medium">
+          <a href="https://freemocktestadda.in/ssc-gd-admit-card-2026.html" class="text-primary hover:underline font-medium">
             SSC GD Previous Year Question Papers
           </a>
         </td>
