--- a/ssc-gd-slot-booking-2026.html
+++ b/ssc-gd-slot-booking-2026.html
@@ -667,6 +667,20 @@
                 </div>
               </div>
             </a>
+            <a href="https://freemocktestadda.in/boards-ap-inter-hall-ticket-2026-bie-ap-gov-in-live-how-to-download-bieap-1st-2nd-year-admit-cards.html" class="block group">
+  <div class="flex gap-3">
+    <span class="ui-text text-2xl font-bold text-burgundy/30">02</span>
+    <div>
+      <p class="text-sm font-medium group-hover:text-burgundy transition-colors">
+        AP Inter Hall Ticket 2026 – 1st & 2nd Year Admit Card
+      </p>
+      <p class="ui-text text-xs text-gray-500 mt-1">
+        2.4k views
+      </p>
+    </div>
+  </div>
+</a>
+
             <a href="https://freemocktestadda.in/" class="block group">
               <div class="flex gap-3">
                 <span class="ui-text text-2xl font-bold text-burgundy/30">04</span>
