--- a/index.html
+++ b/index.html
@@ -431,6 +431,12 @@
             </a>
           </div>
         </div>
+          <p class="my-5 text-center">
+  <a href="https://freemocktestadda.in/dsssb-admit-card-2026-out-at-dsssb-delhi-gov-in.html"
+     class="font-semibold text-blue-700 hover:text-burgundy underline transition-colors">
+    DSSSB Admit Card 2026 Out – Direct Download Link
+  </a>
+</p>
 
         <!-- Important Dates -->
         <div class="bg-card-bg border border-gray-200 rounded p-4">
