--- a/ssc-gd-admit-card-2026.html
+++ b/ssc-gd-admit-card-2026.html
@@ -732,6 +732,12 @@
     </a>
 
   </div>
+<p class="my-5 text-center">
+  <a href="https://freemocktestadda.in/dsssb-admit-card-2026-out-at-dsssb-delhi-gov-in.html"
+     class="font-semibold text-blue-700 hover:text-burgundy underline transition-colors">
+    DSSSB Admit Card 2026 Out – Direct Download Link
+  </a>
+</p>
 
 </div>
 <!-- Category Wise Vacancy Details -->
@@ -1475,6 +1481,12 @@
 
     </table>
   </div>
+<p class="my-5 text-center">
+  <a href="https://freemocktestadda.in/dsssb-admit-card-2026-out-at-dsssb-delhi-gov-in.html"
+     class="font-semibold text-blue-700 hover:text-burgundy underline transition-colors">
+    DSSSB Admit Card 2026 Out – Direct Download Link
+  </a>
+</p>
 
 </div>
 <!-- SSC GD Syllabus Section -->
@@ -1842,6 +1854,12 @@
             </a>
           </div>
         </div>
+<p class="my-5 text-center">
+  <a href="https://freemocktestadda.in/dsssb-admit-card-2026-out-at-dsssb-delhi-gov-in.html"
+     class="font-semibold text-blue-700 hover:text-burgundy underline transition-colors">
+    DSSSB Admit Card 2026 Out – Direct Download Link
+  </a>
+</p>
 
         <!-- Important Exams -->
         <div class="bg-white rounded-lg border border-border overflow-hidden shadow-sm">
