--- a/ssc-gd-slot-booking-2026.html
+++ b/ssc-gd-slot-booking-2026.html
@@ -635,6 +635,12 @@
             </a>
           </div>
         </div>
+<p class="my-5 text-center">
+  <a href="https://freemocktestadda.in/dsssb-admit-card-2026-out-at-dsssb-delhi-gov-in.html"
+     class="font-semibold text-blue-700 hover:text-burgundy underline transition-colors">
+    DSSSB Admit Card 2026 Out – Direct Download Link
+  </a>
+</p>
 
         <!-- Trending Now -->
         <div class="bg-card-bg border border-gray-200 rounded p-4">
@@ -692,6 +698,12 @@
             </a>
           </div>
         </div>
+<p class="my-5 text-center">
+  <a href="https://freemocktestadda.in/dsssb-admit-card-2026-out-at-dsssb-delhi-gov-in.html"
+     class="font-semibold text-blue-700 hover:text-burgundy underline transition-colors">
+    DSSSB Admit Card 2026 Out – Direct Download Link
+  </a>
+</p>
 
         <!-- Important Dates -->
         <div class="bg-card-bg border border-gray-200 rounded p-4">
