--- a/ssc-mts-exam-analysis-2026.html
+++ b/ssc-mts-exam-analysis-2026.html
@@ -521,6 +521,12 @@
             </tbody>
           </table>
         </div>
+<p class="my-5 text-center">
+  <a href="https://freemocktestadda.in/dsssb-admit-card-2026-out-at-dsssb-delhi-gov-in.html"
+     class="font-semibold text-blue-700 hover:text-burgundy underline transition-colors">
+    DSSSB Admit Card 2026 Out – Direct Download Link
+  </a>
+</p>
 
         <!-- Latest Articles -->
         <h3 class="text-2xl font-bold text-foreground mb-3">Latest Articles</h3>
@@ -723,6 +729,12 @@
             </a>
           </div>
         </div>
+<p class="my-5 text-center">
+  <a href="https://freemocktestadda.in/dsssb-admit-card-2026-out-at-dsssb-delhi-gov-in.html"
+     class="font-semibold text-blue-700 hover:text-burgundy underline transition-colors">
+    DSSSB Admit Card 2026 Out – Direct Download Link
+  </a>
+</p>
 
         <!-- Important Dates -->
         <div class="bg-card-bg border border-gray-200 rounded p-4">
@@ -770,6 +782,12 @@
             </div>
           </div>
         </div>
+<p class="my-5 text-center">
+  <a href="https://freemocktestadda.in/dsssb-admit-card-2026-out-at-dsssb-delhi-gov-in.html"
+     class="font-semibold text-blue-700 hover:text-burgundy underline transition-colors">
+    DSSSB Admit Card 2026 Out – Direct Download Link
+  </a>
+</p>
 
         <!-- Newsletter -->
         <div class="bg-navy text-white rounded p-6">
