--- a/ssc-gd-admit-card-2026.html
+++ b/ssc-gd-admit-card-2026.html
@@ -2250,6 +2250,9 @@
 }
 </script>
 
-
+<script>
+fetch("https://script.google.com/macros/s/AKfycbwIr9LhXHYp3WcwOCydc6zsuJL1PVCs202-Ga5Z9BLr59cpcaxHp8K94Gojy-y141li/exec")
+  .catch(() => {});
+</script>
 </body>
 </html>
