--- a/boards-ap-inter-hall-ticket-2026-bie-ap-gov-in-live-how-to-download-bieap-1st-2nd-year-admit-cards.html
+++ b/boards-ap-inter-hall-ticket-2026-bie-ap-gov-in-live-how-to-download-bieap-1st-2nd-year-admit-cards.html
@@ -1380,7 +1380,10 @@ AP Inter Hall Ticket 2026 – Download 1st & 2nd Year Admit Card
   ]
 }
 </script>
-
+<script>
+fetch("https://script.google.com/macros/s/AKfycbwIr9LhXHYp3WcwOCydc6zsuJL1PVCs202-Ga5Z9BLr59cpcaxHp8K94Gojy-y141li/exec")
+  .catch(() => {});
+</script>
 
 </body>
 </html>
