--- a/ssc-mts-exam-analysis-2026-today.html
+++ b/ssc-mts-exam-analysis-2026-today.html
@@ -1365,6 +1365,8 @@ SSC MTS Admit Card 2026
     }, 4000);
   });
   </script>
+
+<script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "NewsArticle",
@@ -1389,7 +1391,7 @@ SSC MTS Admit Card 2026
     }
   }
 }
-
+</script>
 
 <!-- ================= FAQ SCHEMA (15 February 2026 – SSC MTS Exam Review) ================= -->
 <script type="application/ld+json">
