--- a/ssc-gd-admit-card-2026.html
+++ b/ssc-gd-admit-card-2026.html
@@ -1802,6 +1802,14 @@
   </div>
 
 </div>
+<p class="my-4">
+  Check detailed 
+  <a href="https://freemocktestadda.in/ssc-mts-exam-analysis-2026-today.html"
+     class="text-blue-600 font-semibold hover:underline">
+    SSC MTS Exam Analysis 2026 Today
+  </a>
+  for shift-wise difficulty level and good attempts.
+</p>
 
         <!-- SSC GD Constable Banner -->
         <div class="rounded-lg overflow-hidden shadow-md">
@@ -1859,6 +1867,14 @@
      class="font-semibold text-blue-700 hover:text-burgundy underline transition-colors">
     DSSSB Admit Card 2026 Out – Direct Download Link
   </a>
+</p>
+<p class="my-4">
+  Check detailed 
+  <a href="https://freemocktestadda.in/ssc-mts-exam-analysis-2026-today.html"
+     class="text-blue-600 font-semibold hover:underline">
+    SSC MTS Exam Analysis 2026 Today
+  </a>
+  for shift-wise difficulty level and good attempts.
 </p>
 
         <!-- Important Exams -->
