--- a/dsssb-mts-admit-card-2026.html
+++ b/dsssb-mts-admit-card-2026.html
@@ -1067,6 +1067,14 @@
             </a>
           </div>
         </div>
+<p class="my-4">
+  Check detailed 
+  <a href="https://freemocktestadda.in/ssc-mts-exam-analysis-2026-today.html"
+     class="text-blue-600 font-semibold hover:underline">
+    SSC MTS Exam Analysis 2026 Today
+  </a>
+  for shift-wise difficulty level and good attempts.
+</p>
 
 
         
@@ -1114,6 +1122,16 @@
             </a>
           </div>
         </div>
+
+        <p class="my-4">
+  Check detailed 
+  <a href="https://freemocktestadda.in/ssc-mts-exam-analysis-2026-today.html"
+     class="text-blue-600 font-semibold hover:underline">
+    SSC MTS Exam Analysis 2026 Today
+  </a>
+  for shift-wise difficulty level and good attempts.
+</p>
+
         <!-- Exam Categories -->
         <div class="bg-card-bg border border-gray-200 rounded p-4">
           <h3 class="text-lg font-semibold mb-4 pb-2 border-b border-gray-200">Exam Categories</h3>
