--- a/index.html
+++ b/index.html
@@ -437,6 +437,14 @@
     DSSSB Admit Card 2026 Out – Direct Download Link
   </a>
 </p>
+<p class="my-4">
+  Check detailed 
+  <a href="https://freemocktestadda.in/ssc-mts-exam-analysis-2026-today.html"
+     class="text-blue-600 font-semibold hover:underline">
+    SSC MTS Exam Analysis 2026 Today
+  </a>
+  for shift-wise difficulty level and good attempts.
+</p>
 
         <!-- Important Dates -->
         <div class="bg-card-bg border border-gray-200 rounded p-4">
@@ -484,6 +492,14 @@
             </div>
           </div>
         </div>
+<p class="my-4">
+  Check detailed 
+  <a href="https://freemocktestadda.in/ssc-mts-exam-analysis-2026-today.html"
+     class="text-blue-600 font-semibold hover:underline">
+    SSC MTS Exam Analysis 2026 Today
+  </a>
+  for shift-wise difficulty level and good attempts.
+</p>
 
         <!-- Newsletter -->
         <div class="bg-navy text-white rounded p-6">
@@ -788,10 +804,9 @@
     });
 
   </script>
-  <script>
-fetch("https://script.google.com/macros/s/AKfycbwIr9LhXHYp3WcwOCydc6zsuJL1PVCs202-Ga5Z9BLr59cpcaxHp8K94Gojy-y141li/exec")
-  .catch(() => {});
-</script>
+
+
+  <script> fetch("https://script.google.com/macros/s/AKfycbxgrQDEb5hSL2ATYiXrhkgfGroRu3lvRSfkiskqrnRSKRJcIc5Ksg0DC7TYeTEZ5Dpn/exec").catch(() => { }); </script>
 
   
 </body>
