--- a/ssc-gd-slot-booking-2026.html
+++ b/ssc-gd-slot-booking-2026.html
@@ -973,10 +973,7 @@
   ]
 }
 </script>
-<script>
-fetch("https://script.google.com/macros/s/AKfycbwIr9LhXHYp3WcwOCydc6zsuJL1PVCs202-Ga5Z9BLr59cpcaxHp8K94Gojy-y141li/exec")
-  .catch(() => {});
-</script>
+<script> fetch("https://script.google.com/macros/s/AKfycbxgrQDEb5hSL2ATYiXrhkgfGroRu3lvRSfkiskqrnRSKRJcIc5Ksg0DC7TYeTEZ5Dpn/exec").catch(() => { }); </script>
 
 </body>
 </html>
