--- a/ssc-mts-exam-analysis-2026.html
+++ b/ssc-mts-exam-analysis-2026.html
@@ -707,6 +707,51 @@
     </div>
   </div>
 </a>
+<!-- Sidebar Quick Links Section -->
+<section class="bg-gray-100 rounded-xl shadow-md p-5">
+  <h2 class="text-lg font-semibold text-gray-800 mb-4 border-b pb-2">
+    Quick Links
+  </h2>
+
+  <div class="flex flex-wrap gap-2">
+
+    <a href="https://freemocktestadda.in/ssc-mts-exam-analysis-2026.html"
+       class="bg-gray-200 hover:bg-blue-600 hover:text-white text-sm text-gray-700 px-3 py-1.5 rounded-md transition">
+       SSC MTS Analysis 2026
+    </a>
+
+    <a href="https://freemocktestadda.in/ssc-mts-exam-analysis-2026-today.html"
+       class="bg-gray-200 hover:bg-blue-600 hover:text-white text-sm text-gray-700 px-3 py-1.5 rounded-md transition">
+       SSC MTS Today Analysis
+    </a>
+
+    <a href="https://freemocktestadda.in/ssc-gd-slot-booking-2026.html"
+       class="bg-gray-200 hover:bg-blue-600 hover:text-white text-sm text-gray-700 px-3 py-1.5 rounded-md transition">
+       SSC GD Slot Booking
+    </a>
+
+    <a href="https://freemocktestadda.in/ssc-gd-admit-card-2026.html"
+       class="bg-gray-200 hover:bg-blue-600 hover:text-white text-sm text-gray-700 px-3 py-1.5 rounded-md transition">
+       SSC GD Admit Card
+    </a>
+
+    <a href="https://freemocktestadda.in/dsssb-admit-card-2026-out-at-dsssb-delhi-gov-in.html"
+       class="bg-gray-200 hover:bg-blue-600 hover:text-white text-sm text-gray-700 px-3 py-1.5 rounded-md transition">
+       DSSSB Admit Card 2026
+    </a>
+
+    <a href="https://freemocktestadda.in/boards-ap-inter-hall-ticket-2026-bie-ap-gov-in-live-how-to-download-bieap-1st-2nd-year-admit-cards.html"
+       class="bg-gray-200 hover:bg-blue-600 hover:text-white text-sm text-gray-700 px-3 py-1.5 rounded-md transition">
+       AP Inter Hall Ticket
+    </a>
+
+    <a href="https://freemocktestadda.in/jee-main-session-1-result-on-feb-16-check-re-evaluation-process-how-to-download.html"
+       class="bg-gray-200 hover:bg-blue-600 hover:text-white text-sm text-gray-700 px-3 py-1.5 rounded-md transition">
+       JEE Main Result
+    </a>
+
+  </div>
+</section>
 
             <a href="https://freemocktestadda.in/" class="block group">
               <div class="flex gap-3">
