Update and rename boards-ap-inter-hall-ticket-2026-bie-ap-gov-in-live-how-to-download-bieap-1st-2nd-year-admit-cards.html to boards-ap-inter-hall-ticket-2026-bie-ap-gov-in-live.html

--- a/boards-ap-inter-hall-ticket-2026-bie-ap-gov-in-live.html
+++ b/boards-ap-inter-hall-ticket-2026-bie-ap-gov-in-live.html
@@ -11,9 +11,9 @@
 
  <title>AP Inter Hall Ticket 2026 – Download Link, Exam Dates, 1st & 2nd Year Admit Card</title>
 
-<link rel="canonical" href="https://freemocktestadda.in/boards-ap-inter-hall-ticket-2026-bie-ap-gov-in-live-how-to-download-bieap-1st-2nd-year-admit-cards.html" />
+<link rel="canonical" href="http://freemocktestadda.in/boards-ap-inter-hall-ticket-2026-bie-ap-gov-in-live.html" />
 
-<meta property="og:url" content="https://freemocktestadda.in/boards-ap-inter-hall-ticket-2026-bie-ap-gov-in-live-how-to-download-bieap-1st-2nd-year-admit-cards.html">
+<meta property="og:url" content="http://freemocktestadda.in/boards-ap-inter-hall-ticket-2026-bie-ap-gov-in-live.html">
 <meta property="og:type" content="website">
 
 
@@ -1113,7 +1113,7 @@ AP Inter Hall Ticket 2026 – Download 1st & 2nd Year Admit Card
        DSSSB Admit Card 2026
     </a>
 
-    <a href="https://freemocktestadda.in/boards-ap-inter-hall-ticket-2026-bie-ap-gov-in-live-how-to-download-bieap-1st-2nd-year-admit-cards.html"
+    <a href="http://freemocktestadda.in/boards-ap-inter-hall-ticket-2026-bie-ap-gov-in-live.html"
        class="bg-gray-200 hover:bg-blue-600 hover:text-white text-sm text-gray-700 px-3 py-1.5 rounded-md transition">
        AP Inter Hall Ticket
     </a>
@@ -1367,7 +1367,7 @@ AP Inter Hall Ticket 2026 – Download 1st & 2nd Year Admit Card
       "@type": "NewsArticle",
       "headline": "AP Inter Hall Ticket 2026 Released – Download 1st & 2nd Year Admit Card",
       "description": "AP Inter Hall Ticket 2026 released for Intermediate 1st and 2nd Year exams. Check exam dates, timings and download link at bie.ap.gov.in.",
-      "url": "https://freemocktestadda.in/boards-ap-inter-hall-ticket-2026-bie-ap-gov-in-live-how-to-download-bieap-1st-2nd-year-admit-cards.html",
+      "url": "http://freemocktestadda.in/boards-ap-inter-hall-ticket-2026-bie-ap-gov-in-live.html",
       "datePublished": "2026-02-13",
       "dateModified": "2026-02-13",
       "author": {
