--- a/boards-ap-inter-hall-ticket-2026-bie-ap-gov-in-live.html
+++ b/boards-ap-inter-hall-ticket-2026-bie-ap-gov-in-live.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1XJENR2PLG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1XJENR2PLG');
+</script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="AP Inter Hall Ticket 2026 released. Download AP Intermediate 1st and 2nd Year hall tickets from bie.ap.gov.in. Check exam dates, timings and login details here.">
