--- a/bpsc-tre-4-0-exam-date-2026-out.html
+++ b/bpsc-tre-4-0-exam-date-2026-out.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1XJENR2PLG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1XJENR2PLG');
+</script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bihar Public Service Commission (BPSC) has released the exam date for the BPSC TRE 4.0. The exam is tentatively scheduled to be conducted on 22-27 September 2026">
