--- a/dsssb-admit-card-2026-out-at-dsssb-delhi-gov-in.html
+++ b/dsssb-admit-card-2026-out-at-dsssb-delhi-gov-in.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1XJENR2PLG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1XJENR2PLG');
+</script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="DSSSB Admit Card 2026 released on 13 February 2026. Download MTS, PRT, PGT hall ticket from dsssb.delhi.gov.in. Check exam dates, shift timing, centre details and direct link here.">
