--- a/dsssb-mts-admit-card-2026.html
+++ b/dsssb-mts-admit-card-2026.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1XJENR2PLG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1XJENR2PLG');
+</script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="DSSSB MTS Admit Card 2026 released on 13 February 2026. Download hall ticket, check exam dates from 24 February to 14 May 2026 and official link at dsssb.delhi.gov.in.">
