--- a/jee-main-session-1-result-on-feb-16.html
+++ b/jee-main-session-1-result-on-feb-16.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1XJENR2PLG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1XJENR2PLG');
+</script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="JEE Main Session 1 Result 2026 to be released on February 16 at jeemain.nta.nic.in. Check download link, re-evaluation process, cut-off details, percentile calculation and latest NTA updates here.">
