--- a/rrb-group-d-2026-answer-key-live-updates.html
+++ b/rrb-group-d-2026-answer-key-live-updates.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1XJENR2PLG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1XJENR2PLG');
+</script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="RRB Group D Answer Key 2025-26 (OUT) Live: Check Question Paper, Response Sheet & Raise Objection at rrb.digialm.com
