--- a/ssc-gd-admit-card-2026.html
+++ b/ssc-gd-admit-card-2026.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1XJENR2PLG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1XJENR2PLG');
+</script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="SSC GD Admit Card 2026 download link, release date, exam city slip, shift timing and self slot booking details. Check how to download SSC GD hall ticket here.">
