--- a/ssc-gd-constable-exam-postponed-date-2026.html
+++ b/ssc-gd-constable-exam-postponed-date-2026.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1XJENR2PLG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1XJENR2PLG');
+</script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="SSC GD Constable 2026 exam scheduled from 23 February has been postponed. Check official notice, new exam date update, admit card details and slot booking information here.">
