--- a/ssc-mts-exam-analysis-2026-today.html
+++ b/ssc-mts-exam-analysis-2026-today.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1XJENR2PLG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1XJENR2PLG');
+</script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="SSC MTS Exam Analysis 2026 Today for February shifts. Check difficulty level, good attempts, section-wise review, topics asked, shift timings and detailed paper analysis of Maths, Reasoning, English and GS.">
