--- a/boards-ap-inter-hall-ticket-2026-bie-ap-gov-in-live.html
+++ b/boards-ap-inter-hall-ticket-2026-bie-ap-gov-in-live.html
@@ -958,6 +958,10 @@ AP Inter Hall Ticket 2026 – Download 1st & 2nd Year Admit Card
             <p class="text-xs mt-3 text-blue-200">Starts: 10 Dec, 25 | 9 am - 8 pm</p>
           </div>
         </div>
+<a href="https://freemocktestadda.in/ssc-mts-answer-key.html"
+   class="text-blue-600 font-medium hover:underline block">
+   SSC MTS Answer Key 2026
+</a>
 
         <!-- SSC CGL Mahapack Banner -->
         <div class="rounded-lg overflow-hidden shadow-md bg-gradient-to-br from-orange-500 to-orange-600 p-4 text-white">
