--- a/bpsc-tre-4-0-exam-date-2026-out.html
+++ b/bpsc-tre-4-0-exam-date-2026-out.html
@@ -618,6 +618,10 @@
     </div>
   </div>
 </section>
+<a href="https://freemocktestadda.in/ssc-mts-answer-key.html"
+   class="text-blue-600 font-medium hover:underline block">
+   SSC MTS Answer Key 2026
+</a>
 
 <!-- ================= BPSC TRE 4.0 FAQs ================= -->
 <section class="w-full bg-gray-50 py-12">
