--- a/dsssb-admit-card-2026-out-at-dsssb-delhi-gov-in.html
+++ b/dsssb-admit-card-2026-out-at-dsssb-delhi-gov-in.html
@@ -1162,6 +1162,11 @@
             </a>
           </div>
         </div>
+         <a href="https://freemocktestadda.in/ssc-mts-answer-key.html"
+   class="text-blue-600 font-medium hover:underline block">
+   SSC MTS Answer Key 2026
+</a>
+
         <!-- Exam Categories -->
         <div class="bg-card-bg border border-gray-200 rounded p-4">
           <h3 class="text-lg font-semibold mb-4 pb-2 border-b border-gray-200">Exam Categories</h3>
