--- a/dsssb-mts-admit-card-2026.html
+++ b/dsssb-mts-admit-card-2026.html
@@ -1171,6 +1171,12 @@
             </a>
           </div>
         </div>
+
+         <a href="https://freemocktestadda.in/ssc-mts-answer-key.html"
+   class="text-blue-600 font-medium hover:underline block">
+   SSC MTS Answer Key 2026
+</a>
+
 <!-- SSC GD Constable Banner -->
         <div class="rounded-lg overflow-hidden shadow-md">
           <div class="bg-gradient-to-r from-blue-900 to-blue-700 p-4 text-white">
