--- a/index.html
+++ b/index.html
@@ -635,6 +635,10 @@
             </p>
           </div>
         </div>
+<a href="https://freemocktestadda.in/ssc-mts-answer-key.html"
+   class="text-blue-600 font-medium hover:underline block">
+   SSC MTS Answer Key 2026
+</a>
 
         <!-- Popular Exams -->
         <div>
