--- a/jee-main-session-1-result-on-feb-16.html
+++ b/jee-main-session-1-result-on-feb-16.html
@@ -1139,6 +1139,10 @@
 
   </div>
 </section>
+<a href="https://freemocktestadda.in/ssc-mts-answer-key.html"
+   class="text-blue-600 font-medium hover:underline block">
+   SSC MTS Answer Key 2026
+</a>
 
 
           <!-- SSC CGL Mahapack Banner -->
