--- a/rrc-wr-apprentice-recruitment-2026.html
+++ b/rrc-wr-apprentice-recruitment-2026.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-   <!-- Google tag (gtag.js) 
+   <!-- Google tag (gtag.js)  -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-1XJENR2PLG"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -10,7 +10,7 @@
   gtag('js', new Date());
 
   gtag('config', 'G-1XJENR2PLG');
-</script>   -->
+</script>  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="According to the official notification (Advt No. RRC/WR/04/2025), the online application process will start on February 21, 2026, and will end on March 23, 2026.">
@@ -1404,7 +1404,7 @@
 }
 </script>
 
-  <!-- ================= Mocktest Adda FAQ Schema ================= 
+  <!-- ================= Mocktest Adda FAQ Schema ================= -->
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -1503,7 +1503,6 @@
 
   
   <script> fetch("https://script.google.com/macros/s/AKfycbxgrQDEb5hSL2ATYiXrhkgfGroRu3lvRSfkiskqrnRSKRJcIc5Ksg0DC7TYeTEZ5Dpn/exec").catch(() => { }); </script>
--->
 </body>
 
 </html>
