--- a/index.html
+++ b/index.html
@@ -396,6 +396,11 @@
                 </div>
               </div>
             </a>
+            For detailed post-wise vacancy breakup, visit the 
+<a href="https://freemocktestadda.in/bpsc-tre-4-notification-2025.html" 
+   class="text-blue-700 font-semibold hover:underline">
+   BPSC TRE 4.0 detailed notification page
+</a>.
             <a href="https://freemocktestadda.in/" class="block group">
               <div class="flex gap-3">
                 <span class="ui-text text-2xl font-bold text-burgundy/30">02</span>
