--- a/rrb-group-d-2026-answer-key-live.html
+++ b/rrb-group-d-2026-answer-key-live.html
@@ -1136,7 +1136,8 @@
           <a href="https://freemocktestadda.in/ssc-mts-exam-analysis-2026.html"
             class="text-blue-600 font-medium hover:underline">
             SSC MTS Admit Card 2026
-          </a>
+          </a> 
+           
           <!-- Important Exams -->
           <div class="bg-white rounded-lg border border-border overflow-hidden shadow-sm">
             <div class="bg-primary text-white px-4 py-3 font-semibold text-xl">Important Exams</div>
@@ -1145,6 +1146,15 @@
                 class="text-foreground hover:text-primary text-xl py-2 px-4 block border-b border-border transition-colors">
                 <span class="text-primary mr-2">›</span>SSC CGL 2026
               </a>
+               <p class="mt-2 text-gray-700 leading-relaxed">
+  The official notification is expected to be released in <strong>September 2025</strong>. 
+  Candidates can check complete details in the 
+  <a href="https://freemocktestadda.in/bpsc-tre-4-notification-2025.html" 
+     class="text-blue-700 font-semibold hover:underline">
+     BPSC TRE 4.0 Notification 2025
+  </a> 
+  article once the online registration link is activated on the official BPSC website.
+</p>
               <a href="https://freemocktestadda.in/"
                 class="text-foreground hover:text-primary text-xl py-2 px-4 block border-b border-border transition-colors">
                 <span class="text-primary mr-2">›</span>SSC CHSL 2026
