--- a/ssc-mts-exam-analysis-2026.html
+++ b/ssc-mts-exam-analysis-2026.html
@@ -156,13 +156,13 @@
   
   <!-- Logo -->
   <a href="/" class="text-center">
-    <h1 class="text-4xl max-[482px]:text-3xl max-[382px]:text-2xl md:text-5xl font-bold   text-navy">
-      MOCKTEST<span class="text-burgundy"> ADDA</span>
-    </h1>
-    <p class="ui-text text-gray-500 mt-1 tracking-widest text-xs hidden sm:block uppercase">
-      Your Trusted Source for Exam News & Free MockTests
-    </p>
-  </a>
+          <div class="text-4xl max-[482px]:text-3xl max-[382px]:text-2xl md:text-5xl font-bold   text-navy">
+            MOCKTEST<span class="text-burgundy"> ADDA</span>
+          </div>
+          <p class="ui-text text-gray-500 mt-1 tracking-widest text-xs hidden sm:block uppercase">
+            Your Trusted Source for Exam News & Free MockTests
+          </p>
+        </a>
 
   <!-- Mobile Menu Button -->
   <button
