--- a/dsssb-mts-admit-card-2026.html
+++ b/dsssb-mts-admit-card-2026.html
@@ -1176,7 +1176,35 @@
    class="text-blue-600 font-medium hover:underline block">
    SSC MTS Answer Key 2026
 </a>
+<!-- ================= Also Read Section ================= -->
+<section class="w-full bg-white py-8">
+  <div class="max-w-6xl mx-auto px-4">
 
+    <div class="bg-blue-50 border-l-4 border-blue-600 p-6 rounded-lg">
+      <h2 class="text-xl font-semibold text-gray-900 mb-3">
+        Also Read
+      </h2>
+
+      <p class="text-gray-700 leading-relaxed">
+        Candidates preparing for banking and SSC exams can also check the latest updates on 
+        <a href="https://freemocktestadda.in/rbi-assistant-notification-2026.html" 
+           class="text-blue-700 font-semibold hover:underline">
+           RBI Assistant Notification 2026
+        </a>, 
+        <a href="https://freemocktestadda.in/ssc-mts-answer-key.html" 
+           class="text-blue-700 font-semibold hover:underline">
+           SSC MTS Answer Key 2026
+        </a>, and 
+        <a href="https://freemocktestadda.in/ssc-gd-admit-card-2026.html" 
+           class="text-blue-700 font-semibold hover:underline">
+           SSC GD Admit Card 2026
+        </a>. 
+        Stay updated with the latest exam dates, admit cards, answer keys, and official notifications.
+      </p>
+    </div>
+
+  </div>
+</section>
 <!-- SSC GD Constable Banner -->
         <div class="rounded-lg overflow-hidden shadow-md">
           <div class="bg-gradient-to-r from-blue-900 to-blue-700 p-4 text-white">
