--- a/rbi-office-attendant-admit-card-2026.html
+++ b/rbi-office-attendant-admit-card-2026.html
@@ -50,7 +50,7 @@
 
 
   <!-- Tailwind CSS CDN -->
-  <script defer src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
