--- a/jee-main-session-1-result-on-feb-16.html
+++ b/jee-main-session-1-result-on-feb-16.html
@@ -640,6 +640,18 @@
     </div>
   </div>
 </section>
+           <p class="text-gray-700 leading-relaxed">
+  For more updates, check 
+  <a href="https://freemocktestadda.in/ctet-answer-key-2026-live.html" 
+     class="text-blue-600 font-semibold hover:text-blue-800 hover:underline transition">
+     CTET
+  </a> 
+  and 
+  <a href="https://freemocktestadda.in/rbi-office-attendant-admit-card-2026.html" 
+     class="text-blue-600 font-semibold hover:text-blue-800 hover:underline transition">
+     RBI
+  </a>.
+</p>
 <!-- ================= JEE Main 2026 Exam Calendar – Session 1 ================= -->
 <section class="w-full bg-gray-50 py-12">
   <div class="max-w-8xl mx-auto px-6 lg:px-10">
