--- a/ssc-gd-constable-exam-postponed-date-2026.html
+++ b/ssc-gd-constable-exam-postponed-date-2026.html
@@ -870,7 +870,18 @@ The examination, earlier scheduled to commence from 23 February 2026, has now be
     </div>
   </div>
 </section>
-
+<p class="text-gray-700 leading-relaxed">
+  For more updates, check 
+  <a href="https://freemocktestadda.in/ctet-answer-key-2026-live.html" 
+     class="text-blue-600 font-semibold hover:text-blue-800 hover:underline transition">
+     CTET
+  </a> 
+  and 
+  <a href="https://freemocktestadda.in/rbi-office-attendant-admit-card-2026.html" 
+     class="text-blue-600 font-semibold hover:text-blue-800 hover:underline transition">
+     RBI
+  </a>.
+</p>
 <!-- ================= Recent Posts – Line by Line ================= -->
 <section class="w-full bg-gray-50 py-12">
   <div class="max-w-8xl mx-auto px-6 lg:px-10">
