--- a/ssc-mts-exam-analysis-2026-today.html
+++ b/ssc-mts-exam-analysis-2026-today.html
@@ -994,6 +994,18 @@ SSC MTS Admit Card 2026
               <a href="https://freemocktestadda.in/ssc-mts-exam-analysis-2026.html " class="text-blue-600 font-medium hover:underline">
 SSC MTS Admit Card 2026
 </a>
+         <p class="text-gray-700 leading-relaxed">
+  For more updates, check 
+  <a href="https://freemocktestadda.in/ctet-answer-key-2026-live.html" 
+     class="text-blue-600 font-semibold hover:text-blue-800 hover:underline transition">
+     CTET
+  </a> 
+  and 
+  <a href="https://freemocktestadda.in/rbi-office-attendant-admit-card-2026.html" 
+     class="text-blue-600 font-semibold hover:text-blue-800 hover:underline transition">
+     RBI
+  </a>.
+</p>
         
 
         <!-- Recent Posts -->
