--- a/index.html
+++ b/index.html
@@ -471,6 +471,9 @@
        class="bg-gray-200 hover:bg-blue-600 hover:text-white text-sm text-gray-700 px-3 py-1.5 rounded-md transition">
        SSC MTS Analysis 2026
     </a>
+    <a href="https://freemocktestadda.in/education-up-deled-result-out.html" class="text-primary font-semibold hover:underline">
+  UP Deled Result 2026
+</a>
 
     <a href="https://freemocktestadda.in/ssc-mts-exam-analysis-2026-today.html"
        class="bg-gray-200 hover:bg-blue-600 hover:text-white text-sm text-gray-700 px-3 py-1.5 rounded-md transition">
@@ -505,7 +508,9 @@
   </div>
 </section>
 
-
+<a href="https://freemocktestadda.in/education-up-deled-result-out.html" class="text-primary font-semibold hover:underline">
+  UP Deled Result 2026
+</a>
         <!-- Important Dates -->
         <div class="bg-card-bg border border-gray-200 rounded p-4">
           <h3 class="text-lg font-semibold mb-4 pb-2 border-b border-gray-200">Important Dates</h3>
