--- a/dsssb-admit-card-2026-out-at-dsssb-delhi-gov-in.html
+++ b/dsssb-admit-card-2026-out-at-dsssb-delhi-gov-in.html
@@ -1115,7 +1115,12 @@
             </a>
           </div>
         </div>
-
+<a href="https://freemocktestadda.in/education-up-deled-result-out.html" class="text-primary font-semibold hover:underline">
+  UP Deled Result 2026
+</a>
+         <a href="https://freemocktestadda.in/education-up-deled-result-out.html" class="text-primary font-semibold hover:underline">
+  UP Deled Result 2026
+</a>
 
         
 
