--- a/bpsc-tre-4-notification-2025.html
+++ b/bpsc-tre-4-notification-2025.html
@@ -1148,6 +1148,9 @@
                   </div>
                 </div>
               </a>
+               <a href="https://freemocktestadda.in/education-up-deled-result-out.html" class="text-primary font-semibold hover:underline">
+  UP Deled Result 2026
+</a>
               <a href="https://freemocktestadda.in/" class="block group">
                 <div class="flex gap-3">
                   <span class="ui-text text-2xl font-bold text-burgundy/30">02</span>
