--- a/index.html
+++ b/index.html
@@ -565,6 +565,9 @@
   </a>
   for shift-wise difficulty level and good attempts.
 </p>
+        <a href="https://freemocktestadda.in/upsc-civil-services-prelims.html" class="text-primary font-semibold hover:underline">
+  UPSC Prelims 2026
+</a>
 
         <!-- Newsletter -->
         <div class="bg-navy text-white rounded p-6">
