--- a/bpsc-tre-4-0-exam-date-2026-out.html
+++ b/bpsc-tre-4-0-exam-date-2026-out.html
@@ -888,6 +888,9 @@
             class="text-blue-600 font-medium hover:underline">
             RRB Answer Key Released
           </a>
+           <a href="https://freemocktestadda.in/upsc-civil-services-prelims.html" class="text-primary font-semibold hover:underline">
+  UPSC Prelims 2026
+</a>
           <!-- Important Exams -->
           <div class="bg-white rounded-lg border border-border overflow-hidden shadow-sm">
             <div class="bg-primary text-white px-4 py-3 font-semibold text-xl">Important Exams</div>
