--- a/ssc-gd-slot-booking-2026.html
+++ b/ssc-gd-slot-booking-2026.html
@@ -695,6 +695,9 @@
     </div>
   </div>
 </a>
+             <a href="https://freemocktestadda.in/upsc-civil-services-prelims.html" class="text-primary font-semibold hover:underline">
+  UPSC Prelims 2026
+</a>
 
             <a href="https://freemocktestadda.in/" class="block group">
               <div class="flex gap-3">
