--- a/cbse-ctet-answer-key-live.html
+++ b/cbse-ctet-answer-key-live.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-   <!-- Google tag (gtag.js) 
+   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-1XJENR2PLG"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -10,7 +10,7 @@
   gtag('js', new Date());
 
   gtag('config', 'G-1XJENR2PLG');
-</script>   -->
+</script>   
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="CTET Answer Key 2026 LIVE News: The Central Board of Secondary Education, CBSE has not yet released the CTET Answer Key 2026.">
