added interlink <a href="https://freemocktestadda.in/karnataka-2nd-puc-hall-ticket-out.html" class="text-blue-600 hover:underline"> isko </a>

--- a/ts-inter-hall-ticket-2026.html
+++ b/ts-inter-hall-ticket-2026.html
@@ -1033,7 +1033,9 @@
               </a>
             </div>
           </div>
-
+<a href="https://freemocktestadda.in/karnataka-2nd-puc-hall-ticket-out.html" class="text-blue-600 hover:underline">
+isko
+</a>
           <!-- Important Dates -->
           <div class="bg-card-bg border border-gray-200 rounded p-4">
             <h3 class="text-lg font-semibold mb-4 pb-2 border-b border-gray-200">Important Dates</h3>
