--- a/bpsc-tre-4-notification-2025.html
+++ b/bpsc-tre-4-notification-2025.html
@@ -1119,7 +1119,9 @@
   </div>
 </section>
 
-
+<a href="https://freemocktestadda.in/karnataka-2nd-puc-hall-ticket-out.html" class="text-blue-600 hover:underline">
+isko
+</a>
           <!-- SSC CGL Mahapack Banner -->
           <div
             class="rounded-lg overflow-hidden shadow-md bg-gradient-to-br from-orange-500 to-orange-600 p-4 text-white">
