--- a/index.html
+++ b/index.html
@@ -568,7 +568,9 @@
         <a href="https://freemocktestadda.in/upsc-civil-services-prelims.html" class="text-primary font-semibold hover:underline">
   UPSC Prelims 2026
 </a>
-
+<a href="https://freemocktestadda.in/karnataka-2nd-puc-hall-ticket-out.html" class="text-blue-600 hover:underline">
+isko
+</a>
         <!-- Newsletter -->
         <div class="bg-navy text-white rounded p-6">
   <h3 class="text-lg font-semibold mb-2">Stay Updated</h3>
