--- a/ssc-mts-exam-analysis-2026.html
+++ b/ssc-mts-exam-analysis-2026.html
@@ -849,7 +849,9 @@
     DSSSB Admit Card 2026 Out – Direct Download Link
   </a>
 </p>
-
+<a href="https://freemocktestadda.in/karnataka-2nd-puc-hall-ticket-out.html" class="text-blue-600 hover:underline">
+isko
+</a>
         <!-- Newsletter -->
         <div class="bg-navy text-white rounded p-6">
   <h3 class="text-lg font-semibold mb-2">Stay Updated</h3>
