--- a/bpsc-tre-4-notification-2025.html
+++ b/bpsc-tre-4-notification-2025.html
@@ -975,7 +975,13 @@
             class="text-blue-600 font-medium hover:underline">
             SSC MTS Admit Card 2026
           </a>
-
+<p>
+  Candidates preparing for government jobs can check the latest 
+  <a href="https://freemocktestadda.in/bpsc-bihar-apo-recruitment.html" class="text-blue-600 hover:underline">
+  BPSC
+  </a> 
+  APO Recruitment 2026 update here.
+</p>
 
           <!-- Recent Posts -->
           <div class="bg-white rounded-lg border border-border overflow-hidden shadow-sm">
