--- a/index.html
+++ b/index.html
@@ -507,7 +507,13 @@
 
   </div>
 </section>
-
+<p>
+  Candidates preparing for government jobs can check the latest 
+  <a href="https://freemocktestadda.in/bpsc-bihar-apo-recruitment.html" class="text-blue-600 hover:underline">
+  BPSC
+  </a> 
+  APO Recruitment 2026 update here.
+</p>
 <a href="https://freemocktestadda.in/education-up-deled-result-out.html" class="text-primary font-semibold hover:underline">
   UP Deled Result 2026
 </a>
