--- a/ssc-gd-slot-booking-2026.html
+++ b/ssc-gd-slot-booking-2026.html
@@ -540,7 +540,13 @@
             </a>
           </div>
         </div>
-
+<p>
+  Candidates preparing for government jobs can check the latest 
+  <a href="https://freemocktestadda.in/bpsc-bihar-apo-recruitment.html" class="text-blue-600 hover:underline">
+  BPSC
+  </a> 
+  APO Recruitment 2026 update here.
+</p>
         <!-- SSC GD Constable Banner -->
         <div class="rounded-lg overflow-hidden shadow-md">
           <div class="bg-gradient-to-r from-blue-900 to-blue-700 p-4 text-white">
