--- a/ssc-mts-exam-analysis-2026-today.html
+++ b/ssc-mts-exam-analysis-2026-today.html
@@ -597,7 +597,13 @@ SSC MTS Admit Card 2026
 
   </div>
 </section>
-
+<p>
+  Candidates preparing for government jobs can check the latest 
+  <a href="https://freemocktestadda.in/bpsc-bihar-apo-recruitment.html" class="text-blue-600 hover:underline">
+  BPSC
+  </a> 
+  APO Recruitment 2026 update here.
+</p>
 <!-- SSC MTS 1st Shift Good Attempts Section -->
 <section class="w-full bg-gray-100 py-10">
   <div class="max-w-5xl mx-auto px-4 space-y-6 text-gray-800">
