--- a/rbi-assistant-notification-2026.html
+++ b/rbi-assistant-notification-2026.html
@@ -459,6 +459,13 @@
     </div>
   </div>
 </section>
+<p>
+  Candidates preparing for government jobs can check the latest 
+  <a href="https://freemocktestadda.in/bpsc-bihar-apo-recruitment.html" class="text-blue-600 hover:underline">
+  BPSC
+  </a> 
+  APO Recruitment 2026 update here.
+</p>
 <section class="w-full bg-white py-12">
   <div class="max-w-7xl mx-auto px-6 lg:px-10">
     <div class="max-w-5xl">
