--- a/rrb-group-d-2026-answer-key-live.html
+++ b/rrb-group-d-2026-answer-key-live.html
@@ -449,6 +449,13 @@
     </div>
   </div>
 </section>
+<p>
+  Candidates preparing for government jobs can check the latest 
+  <a href="https://freemocktestadda.in/bpsc-bihar-apo-recruitment.html" class="text-blue-600 hover:underline">
+  BPSC
+  </a> 
+  APO Recruitment 2026 update here.
+</p>
 <!-- ================= Railway Group D CBT 1 Answer Key 2026 ================= -->
 <section class="w-full bg-white py-12">
   <div class="max-w-8xl mx-auto px-6 lg:px-10">
